# monica

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Monica_macOS.xcf  README.md  build.rs  index.html  package.json  tsconfig.json  vite.config.ts  windows-installer.iss
.github/workflows/: release.yml
icons/: Monica.xcf
src/: App.tsx  canvas.rs  canvas_orchestrator.rs  canvas_window.rs  canvas_window_manager.rs  icon.rs  main.rs  main_window.rs  platform_impl.rs  ui.rs  ui_canvas.rs  ui_main.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: draw-shortcut.json  draw.json  main-shortcut.json  main.json
src-tauri/icons/: icon.icns
src-tauri/icons/macos/: icon.icns
src-tauri/src/: lib.rs  main.rs  mouse.rs  permissions.rs  window.rs
src-tauri/src/commands/: mod.rs
src/common/: commands.ts  mouse.ts  mouse.tsx  tool.ts  utils.ts  utils.tsx
src/draw-window/: CanvasController.tsx  DrawApp.tsx  GlobalState.tsx  canvas.ts
src/draw-window/components/: CanvasArea.tsx  CursorDecoration.tsx  Tooltip.tsx  WindowManager.tsx
src/draw-window/lib/: canvas.ts  event-handler.ts  mouse-tool-glue.ts  tool-controller.ts  tool.ts
src/home-window/: HomeApp.tsx
src/main-window/: CanvasState.tsx  MainApp.tsx
src/main-window/components/: Controller.tsx  WindowManager.tsx
src/main-window/lib/: canvas-handle.ts  tool.ts  window-management.ts  window-rect-utils.ts  window-size.ts  window-state.ts
