[package]
name = "monica"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.4.2"
rust-embed = "8.9.0"
raw-window-handle = "0.6.2"
display-config = { git = "https://github.com/tasuren/display-config-rs.git" }
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSResponder", "NSView"] }
