[package]
name = "monica"
version = "1.0.1"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Takagi Tasuku <tasuren@outlook.jp>"]
repository = "https://github.com/tasuren/monica"
keywords = ["software"]

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
rust-embed = "8.11"
raw-window-handle = "0.6"
display-config = { git = "https://github.com/tasuren/display-config-rs.git" }
dpi = "0.1"
async-channel = "2.5"
anyhow = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
device_query = "4.0.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
default-features = false
features = ["Win32_UI_WindowsAndMessaging"]

[target.'cfg(windows)'.build-dependencies]
tauri-winres = "0.3.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
version = "0.3.2"
default-features = false
features = ["NSWindow", "NSWindowScripting", "NSColor", "NSResponder", "NSView"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[package.metadata.tauri-winres]
OriginalFilename = "MONICA.EXE"
ProductName = "Monica"
LegalCopyright = "Copyright © 2025 Takagi Tasuku"
FileDescription = "Simple, cross-platform on-screen annotation software"

[package.metadata.bundle]
name = "Monica"
identifier = "jp.tasuren.monica"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png"]
copyright = "Copyright © 2025 Takagi Tasuku"
category = "Productivity"
short_description = "Simple, cross-platform on-screen annotation software"
long_description = """
This software allows you to draw and highlight directly on your screen.
Enhance your presentations, online meetings, and educational content by easily adding notes and drawings on the fly.
"""
