[package]
name = "monica-backend"
authors = ["Takagi Tasuku (tasuren@outlook.jp)"]
license-file = "../LICENSE"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "monica_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
device_query = "3.0.1"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"
tauri-plugin-macos-permissions = "2.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
